--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,9 +1,10 @@
+
 <nav class="navbar">
     <div class="nav-container">
         <a href="/" class="logo">TradeTrail</a>
         <ul class="nav-links">
             <li><a href="/rentals">Renting</a></li>
-            <li><a href="/second-hand">Second-Hand Buying</a></li>
+            <li><a href="/secondHand">Second-Hand Buying</a></li>
             <li><a href="/subscriptions">Subscription Swapping</a></li>
         </ul>
         <button class="menu-toggle" onclick="toggleMenu()">☰</button>
