--- a/views/secondHand/addBidProduct.ejs
+++ b/views/secondHand/addBidProduct.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-   <%- include('../includes/navigation.ejs') %>
+    <%- include('../common/navigation.ejs') %>
 
     <main>
         <form class="product-form" action="/secondHand/buy/<%= productId %>/add-bid-product" method="POST">
