--- a/views/secondHand/auction.ejs
+++ b/views/secondHand/auction.ejs
@@ -12,7 +12,7 @@
  
 </head>
 <body>
-    <%- include('../includes/navigation.ejs') %>
+    <%- include('../common/navigation.ejs') %>
     <main>
         <section>
             <h1>Auction</h1>
