--- a/views/secondHand/secondHandHome.ejs
+++ b/views/secondHand/secondHandHome.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/navigation.css">
 </head>
 
-<%- include("../includes/navigation") %>
+<%- include('../common/navigation.ejs') %>
 
 <h2>second-hand buying initial page</h2>
 <p>2 options as sell or buy. load pages accordingly</p>
