--- a/views/secondHand/add-product.ejs
+++ b/views/secondHand/add-product.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-   <%- include('../includes/navigation.ejs') %>
+    <%- include('../common/navigation.ejs') %>
 
     <main>
         <form class="product-form" action="/secondHand/sell" method="POST">
