--- a/views/secondHand/buy.ejs
+++ b/views/secondHand/buy.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/navigation.css">
 </head>
     <body>
-        <%- include('../includes/navigation.ejs') %>
+        <%- include('../common/navigation.ejs') %>
             <main>
                 <% if (prods.length > 0) { %>
                     <div class="grid">
