Added second-hand add item frontend and connectivity

--- a/views/rentals/rentalHome.ejs
+++ b/views/rentals/rentalHome.ejs
@@ -22,13 +22,13 @@
             <div class="option">
                 <h2>Want to Post Something?</h2>
                 <p>List your item for rent and find interested renters easily</p>
-                <button onclick="window.location.href='/post-item'">Post an Item to Rent</button>
+                <button onclick="window.location.href='/rental/post'">Post an Item to Rent</button>
             </div>
 
             <div class="option">
-                <h2>Want to Buy Something?</h2>
+                <h2>Want to Rent Something?</h2>
                 <p>Browse available rental items and get what you need</p>
-                <button onclick="window.location.href='/buy-items'">Buy an Item</button>
+                <button onclick="window.location.href='/rental/rent'">Rent an Item</button>
             </div>
         </div>
     </div>
