--- a/views/secondHand/add-product.ejs
+++ b/views/secondHand/add-product.ejs
@@ -8,8 +8,8 @@
     <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/forms.css">
-    <!-- <link rel="stylesheet" href="/css/product.css"> -->
-    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/css/product.css">
+    <!-- <link rel="stylesheet" href="/css/navigation.css"> -->
 </head>
 
 <body>
