--- a/views/common/navigation.ejs
+++ b/views/common/navigation.ejs
@@ -16,7 +16,7 @@
         <a href="/">TradeTrail</a>
     </div>
     <ul>
-        <li><a href="/rentals">Renting Items</a></li>
+        <li><a href="/rental">Renting Items</a></li>
         <li><a href="/subscriptions">Subscription Swapping</a></li>
         <li><a href="/secondHand">Second-Hand Buying</a></li>
         <li><a href="#">Cart Status</a></li>
