--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,7 @@
                 <p><%= feature.description %></p>
                 <!-- <button onclick="window.location.href='<%= feature.link %>'">Explore</button> -->
                 <% if (feature.title === "Renting Items") { %>
-                    <button onclick="window.location.href='/rentals'">Rent an Item</button>  
+                    <button onclick="window.location.href='/rental'">Rent an Item</button>  
                 <% } else if (feature.title === "Second-Hand Chain Buying") { %>
                     <button onclick="window.location.href='/secondHand'">Buy an Item</button>                      
                 <% } else { %>
