--- a/views/rentals/post-product.ejs
+++ b/views/rentals/post-product.ejs
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title><%= pageTitle %></title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
+    <!-- <link rel="stylesheet" href="/css/navigation.css"> -->
 </head>
+
 <body>
-    
+    <%- include('../common/navigation.ejs') %>
+
+    <main>
+        <form class="product-form" action="/rental/post" method="POST">
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+            </div>
+            <div class="form-control">
+                <label for="imageUrl">Upload image</label>
+                <input type="text" name="imageUrl" id="imageUrl">
+            </div>
+
+            <!-- Dropdown for rate options -->
+            <div class="form-control">
+                <label for="rate">Price Type</label>
+                <select name="rate" id="rate">
+                    <option value="" selected>Select one</option> <!-- Default option -->
+                    <option value="hour">Price/hour</option>
+                    <option value="day">Price/day</option>
+                    <option value="week">Price/week</option>
+                    <option value="month">Price/month</option>
+                </select>
+            </div>
+
+            <div class="form-control">
+                <label for="price">Price</label>
+                <input type="number" name="price" id="price" step="10">
+            </div>
+            
+            
+
+            <div class="form-control">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" rows="5"></textarea>
+            </div>
+            <div class="form-control">
+                <label for="location">Location</label>
+                <textarea name="location" id="location" rows="5"></textarea>
+            </div>
+
+            <button class="btn" type="submit">Add Product</button>
+        </form>
+    </main>
+    <!-- nnn -->
 </body>
+
 </html>
