--- a/views/rentals/post-product.ejs
+++ b/views/rentals/post-product.ejs
@@ -19,17 +19,18 @@
         <form class="product-form" action="/rental/post" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
-                <input type="text" name="title" id="title">
+                <input type="text" name="title" id="title" required>
             </div>
+
             <div class="form-control">
                 <label for="imageUrl">Upload image</label>
-                <input type="text" name="imageUrl" id="imageUrl">
+                <input type="text" name="imageUrl" id="imageUrl" required>
             </div>
 
             <!-- Dropdown for rate options -->
             <div class="form-control">
                 <label for="rate">Price Type</label>
-                <select name="rate" id="rate">
+                <select name="rate" id="rate" required>
                     <option value="" selected>Select one</option> <!-- Default option -->
                     <option value="hour">Price/hour</option>
                     <option value="day">Price/day</option>
@@ -40,19 +41,26 @@
 
             <div class="form-control">
                 <label for="price">Price</label>
-                <input type="number" name="price" id="price" step="10">
+                <input type="number" name="price" id="price" step="10" required>
             </div>
-            
-            
+
+            <!-- Add Quantity Input -->
+            <div class="form-control">
+                <label for="quantity">Quantity Available</label>
+                <input type="number" name="quantity" id="quantity" min="1" required>
+            </div>
 
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5"></textarea>
+                <textarea name="description" id="description" rows="5" required></textarea>
             </div>
+
             <div class="form-control">
                 <label for="location">Location</label>
-                <textarea name="location" id="location" rows="5"></textarea>
+                <textarea name="location" id="location" rows="5" required></textarea>
             </div>
+
+            
 
             <button class="btn" type="submit">Add Product</button>
         </form>
