--- a/views/subscriptionSwapping/buy.ejs
+++ b/views/subscriptionSwapping/buy.ejs
@@ -29,24 +29,29 @@
                                 <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                             </div>
                             <div class="card__content">
+                                <h2 class="title">
+                                    <%= product.platform_name %>
+                                </h2>
                                 <h2 class="product__price">$
                                     <%= product.price %>
                                 </h2>
                                 <p class="product__description">
                                     <%= product.description %>
                                 </p>
-                                <p class="product__description">
-                                    <%= product.location%>
-                                </p>
+
                             </div>
                             <div class="card__actions">
-                                <a href="/secondHand/buy/<%= product._id %>" class="btn">Auction</a>
-                                <!-- <a href="/secondHand/buy/<%= product._id %>" class="btn"><button>Auction</button></a> -->
+                                <!-- Auction Button -->
+                                <a href="/subscription/buy/<%= product._id %>?type=auction" class="btn">Auction</a>
+
+                                <!-- Direct Purchase Button -->
+                                <a href="/subscription/buy/<%= product._id %>?type=direct" class="btn ">Buy Now</a>
                             </div>
+
                         </article>
                         <% } %>
                 </div>
                 <% } else { %>
-                    <h1>No Products Found!</h1>
+                    <h1>No Product Found!</h1>
                     <% } %>
         </main>
