--- a/views/subscriptionSwapping/add-product.ejs
+++ b/views/subscriptionSwapping/add-product.ejs
@@ -2,54 +2,54 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        <%= pageTitle %>
-    </title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/product.css">
-    <!-- <link rel="stylesheet" href="/css/navigation.css"> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title><%= pageTitle %></title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/product.css">
+  <!-- <link rel="stylesheet" href="/css/navigation.css"> -->
 </head>
 
 <body>
-    <%- include('../common/navigation.ejs') %>
+  <%- include('../common/navigation.ejs') %>
 
-        <main>
-            <form class="product-form" action="/subscription/sell" method="POST">
-                <div class="form-control">
-                    <label for="platform_name">Platform Name</label>
-                    <input type="text" name="platform_name" id="title">
-                </div>
-                <div class="form-control">
-                    <label for="imageUrl">Upload image</label>
-                    <input type="text" name="imageUrl" id="imageUrl">
-                </div>
-                <div class="form-control">
-                    <label for="price"> Price on direct purchase</label>
-                    <input type="number" name="price" id="price" step="0.01">
-                </div>
-                <div class="form-control">
-                    <label for="min_price"> Minimum Price on auction</label>
-                    <input type="number" name="min_price" id="price" step="0.01">
-                </div>
-                <div class="form-control">
-                    <label for="start-date">Start Date</label>
-                    <input type="date" name="startDate" id="startDate">
-                </div>
-                <div class="form-control">
-                    <label for="end-date">End Date</label>
-                    <input type="date" name="endDate" id="endDate">
-                </div>
-                <div class="form-control">
-                    <label for="description">Description</label>
-                    <textarea name="description" id="description" rows="5"></textarea>
-                </div>
+  <main>
+    <form class="product-form" action="/subscription/sell" method="POST">
+      <div class="form-control">
+        <label for="platform_name">Platform Name</label>
+        <input type="text" name="platform_name" id="platform_name" required>
+      </div>
+      <div class="form-control">
+        <label for="imageUrl">Upload image</label>
+        <input type="text" name="imageUrl" id="imageUrl" required>
+      </div>
+      <div class="form-control">
+        <label for="price">Price on direct purchase</label>
+        <input type="number" name="price" id="price" step="0.01" required>
+      </div>
+      <div class="form-control">
+        <label for="min_price">Minimum Price on auction</label>
+        <input type="number" name="min_price" id="min_price" step="0.01" required>
+      </div>
+      <div class="form-control">
+        <label for="startDate">Start Date</label>
+        <input type="date" name="startDate" id="startDate" required>
+      </div>
+      <div class="form-control">
+        <label for="endDate">End Date</label>
+        <input type="date" name="endDate" id="endDate" required>
+      </div>
+      <div class="form-control">
+        <label for="description">Description</label>
+        <textarea name="description" id="description" rows="5" required></textarea>
+      </div>
 
+      <button class="btn" type="submit">Add Product</button>
+    </form>
+  </main>
+  <!-- nnn -->
+</body>
 
-                <button class="btn" type="submit">Add Product</button>
-            </form>
-        </main>
-        <!-- nnn -->
+</html>
