--- a/views/subscriptionSwapping/buy.ejs
+++ b/views/subscriptionSwapping/buy.ejs
@@ -1,66 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        <%= pageTitle %>
-    </title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/product.css">
-    <link rel="stylesheet" href="/css/navigation.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= pageTitle %></title>
+  <link rel="stylesheet" href="/css/main.css">
+  <!-- Added styles to match rental search page -->
+  <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/rentalStyles.css">
+  <link rel="stylesheet" href="/css/navigation.css">
 </head>
-
 <body>
+  <div id="navbar">
     <%- include('../common/navigation.ejs') %>
-        <main>
-            <% if (prods.length > 0) { %>
-                <div class="grid">
-                    <% for (let product of prods) { %>
-                        <article class="card product-item">
-                            <header class="card__header">
-                                <h1 class="product__title">
-                                    <%= product.title %>
-                                </h1>
-                            </header>
-                            <div class="card__image">
-                                <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-                            </div>
-                            <div class="card__content">
-                                <h2 class="title">
-                                    <%= product.platform_name %>
-                                </h2>
-                                <h2 class="product__price">$
-                                    <%= product.price %>
-                                </h2>
-                                <p class="product__description">
-                                    <%= product.description %>
-                                </p>
+  </div>
 
-                            </div>
-                            <div class="card__actions">
-                                <!-- Auction Button -->
-                                <!-- <a href="/subscription/buy/<%= product._id %>?type=auction" class="btn">Auction</a> -->
-                                <form action="/subscription/buy/<%= product._id %>" method="GET" class="inline-form">
-                                    <button type="submit" class="btn ">Auction</button>
-                                </form>
-
-
-                                <!-- Direct Purchase Button
-                                <a href="/subscription/cart/update/<%= product._id %>?type=direct" class="btn ">Buy Now</a> -->
-
-                                <form action="/subscription/add-to-cart/<%= product._id %>" method="POST" class="inline-form">
-                                    <button type="submit" class="btn ">Buy Now</button>
-                                </form>
-
-                            </div>
-
-                        </article>
-                        <% } %>
+  <main>
+    <h1>Subscriptions</h1>
+    <form action="/subscription/buy" method="GET" class="search-form">
+      <input 
+        type="text" 
+        name="search" 
+        placeholder="Search products by platform name or description..."
+        value="<%= searchQuery || '' %>"
+      >
+      <button type="submit">Search</button>
+    </form>
+    
+    <% if (prods.length > 0) { %>
+      <div class="rental-list">
+        <% for (let product of prods) { %>
+          <div class="rental-item">
+            <div class="product-card">
+              <div class="card__image">
+                <img src="<%= product.imageUrl %>" alt="<%= product.platform_name %>">
+              </div>
+              <div class="product-info">
+                <h3><%= product.platform_name %></h3>
+                <p class="price">Price: ₹<%= product.price %></p>
+                <p class="description"><%= product.description %></p>
+                <% if (product.seller && product.seller.fullName) { %>
+                  <p class="seller"><b>Seller:</b> <%= product.seller.fullName %></p>
+                <% } %>
+                <div class="button-group vertical">
+                  <a href="/subscription/buy/<%= product._id %>" class="btn auction-btn">Auction</a>
                 </div>
-                <% } else { %>
-                    <h1>No Product Found!</h1>
-                    <% } %>
-        </main>
+              </div>
+            </div>
+          </div>
+        <% } %>
+      </div>
+    <% } else { %>
+      <h1>No Products Found!</h1>
+    <% } %>
+  </main>
+</body>
+</html>
